2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: into the function "ui_pagination"
	added the parameter "print_total_items" to show the total of
	item in the list. It is showed althought the pagination does not.
	
	* operation/agentes/estado_agente.php: changed to don't show the
	total in the pagination block in the bottom.

2013-09-03  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  godmode/tag/tag.php,
	  godmode/tag/edit_tag.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql,
	  pandoradb_data.sql: Added support for tag phone information.

2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/tree.php, include/functions_treeview.php: improved the
	source code style.
	
	* operation/search_agents.getdata.php: added to search for the
	main address of agent.

2013-09-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_edit_modules.php: added field "ip_target"
	for to massive edit module.

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/servers/servers.build_table.php: fixed the tooltip for
	lag column.
	
	Fixes: #2378

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: set the first default server
	when create a new agent.
	
	MERGED FROM THE BRANCH 4.0

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_generalagente.php: show a warning
	message when the agent has not a assigned server.
	
	* operation/agentes/ver_agente.php: some changes for to make more
	easy the merge with the last branch.
	
	MERGED FROM THE BRANCH 4.0

2013-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/groups/group_list.php: fixed pagination mismatch.
	
	Fixes: #2383

2013-08-29 Miguel de Dios <miguel.dedios@artica.es>
	