@@ -1,5 +1,10 @@
 2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_api.php: fixed typing bugs...yes I wrote a lot
+	of them, sorry.
+
+2013-09-03 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/functions_ui.php: into the function "ui_pagination"
 	added the parameter "print_total_items" to show the total of
 	item in the list. It is showed althought the pagination does not.
